[package]
name = "libtrowel"
version = "0.1.0"
authors = ["Rob Story <wrobstory@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
html5ever = "0.25.1"
